syntax = "proto3";
package integration;

option java_multiple_files = true;
option java_package = "dev.ngdangkietswe.sweprotobufshared.integration.protobuf";
option java_outer_classname = "IntegrationProtobuf";

import "common/shared.proto";

enum StravaActivityType {
  RUN = 0;
  RIDE = 1;
  SWIM = 2;
  WORKOUT = 3;
  HIKE = 4;
  WALK = 5;
  NORDIC_SKI = 6;
  ALPINE_SKI = 7;
  BACKCOUNTRY_SKI = 8;
  CANOEING = 9;
  CROSSFIT = 10;
  E_BIKE_RIDE = 11;
  ELLIPTICAL = 12;
  ICE_SKATE = 13;
  INLINE_SKATE = 14;
  KAYAKING = 15;
  KITESURF = 16;
  ROCK_CLIMBING = 17;
  ROLLER_SKI = 18;
  ROWING = 19;
  SNOWBOARD = 20;
  SNOWSHOE = 21;
  STAIR_STEPPER = 22;
  STAND_UP_PADDLING = 23;
  SURFING = 24;
  VIRTUAL_RIDE = 25;
  VIRTUAL_RUN = 26;
  WEIGHT_TRAINING = 27;
  WINDSURF = 28;
  YOGA = 29;
  OTHER = 30;
}

message StravaAccount {
  string id = 1;
  string user_id = 2;
  string access_token = 3;
  string refresh_token = 4;
  string expires_at = 5;
  string token_type = 6;
  int64 athlete_id = 7;
  string username = 8;
  string first_name = 9;
  string last_name = 10;
  string created_at = 11;
  string updated_at = 12;
}

message StravaActivity {
  string id = 1;
  string user_id = 2;
  int64 athlete_id = 3;
  int64 strava_activity_id = 4;
  string activity_name = 5;
  int32 activity_type = 6;
  string activity_url = 7;
  string start_date = 8;
  double distance = 9; // Ex: 3.5 (km)
  string moving_time = 10; // Ex: 12:30 (HH:mm)
  string elapsed_time = 11; // Ex: 12:30 (HH:mm)
  double total_elevation_gain = 12;
  double average_speed = 13; // Ex: 4.5 (km/h)
  double max_speed = 14; // Ex: 10.0 (km/h)
  string pace = 15; // Ex: 05:00/km
  string created_at = 16;
}